--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,30 @@
-.App {
+body {
+  margin: 0px;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.topnav {
+  margin: 0em 0em 1em 0em;
+  padding: 1em;
+  background-color: rgb(247 219 34);
+  color: rgb(10, 10, 10);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.beetext {
+    text-align: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+    margin: 1em 0em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.guessInput {
+    margin: 1em;
+    padding: .5em;
+    font-size: 2em;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+
 }
