--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,8 @@ body {
 }
 
 .container {
-    margin: 1em 0em;
+    margin: auto;
+    width: 80%
 }
 
 .guessInput {
@@ -26,5 +27,27 @@ body {
     font-size: 2em;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
+}
 
+.wordhistory {
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    border: 1px solid rgb(10, 10, 10);
+    border-radius: .1em;
+}
+.wordhistory-word {
+    flex: 1 1 11%;
+    margin: 0em .5em;
+    font-size: .8em;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.btn-worddata {
+    padding: .5em;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    font-size: .6em;
+    color:rgb(10, 10, 10);
+    border: none;
 }
