--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,15 @@ body {
     color:rgb(10, 10, 10);
     border: none;
 }
+
+.wordlist {
+    margin: 1em;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1em;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.wordlist-word{
+    text-align: left;
+}
